--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -87,3 +87,22 @@ h3 {
     text-decoration: none;
     background: #4aaaa5;
   }
+
+  .portImage{
+    width: 274px;
+  }
+
+  .work {
+    position: absolute;
+    bottom: 20px;
+    width: 274px;
+    font-size: 20px;
+    padding: 15px;
+    margin-bottom: 10px;
+    font-weight: 300;
+    line-height: 30px;
+    color: #ffffff;
+    text-align: center;
+    background: #4aaaa5;
+    border-bottom: 0;
+  }
