Finished contact page, next will add comments and clean up formatting

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -35,6 +35,11 @@ p {
       margin-top: 20px;
   }
 
+  html{
+    position: relative; 
+    min-height: 100%;
+  }
+
   footer {
       
     position: absolute;
