--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,7 +1,9 @@
+/* Styling for Bootstrap Nav Bar */
 .navbar {
     padding:0px;
 }
 
+/* Styling for Section */
 .main-section {
     float: left;
     width: 100%;
@@ -12,6 +14,7 @@
     border: 1px solid #dddddd;
   }
  
+  /* Styling for Main container for nav bar */
   #masthead {
    
     z-index: 99;
@@ -23,7 +26,7 @@
     border-bottom: 2px solid #cccccc;
   }
  
-
+/* Styling for content container */
   .container {
     width: 100%;
     max-width: 960px;
@@ -31,15 +34,18 @@
     clear: both;
   }
 
+/* Styling for P tag */
 p {
       margin-top: 20px;
   }
 
+  /* Styling for HTML used for sticky footer */
   html{
     position: relative; 
     min-height: 100%;
   }
 
+  /* Styling for footer */
   footer {
       
     position: absolute;
@@ -56,6 +62,7 @@ p {
     height: 50px;
   }
 
+  /* Styling for body */
   body {
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     font-size: 18px;
@@ -65,6 +72,7 @@ p {
   }
 
 
+/* Styling for h2 h3 */
 h2,
 h3 {
   font-family: Georgia, Times, "Times New Roman", serif;
@@ -72,6 +80,7 @@ h3 {
   color: #4aaaa5;
 }
 
+/* Styling specific to h3 */
 h3 {
     padding-bottom: 20px;
     font-size: 30px;
@@ -79,6 +88,7 @@ h3 {
     border-bottom: 3px solid #dddddd;
   }
 
+  /* Styling for the My name portion of navbar */
   #logo {
     float: left;
     width: 250px;
@@ -93,10 +103,12 @@ h3 {
     background: #4aaaa5;
   }
 
+  /* Styling for the portfolio images */
   .portImage{
     width: 274px;
   }
 
+  /* styling for the text on portfolio images */
   .work {
     position: absolute;
     bottom: 20px;
